--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CALCI</title>
-    <link rel="stylesheet" href="C:\Users\Komal\OneDrive\Desktop\calci\calci.css" />
+    <link rel="stylesheet" href="C:\Users\Komal\OneDrive\Desktop\calci\style1.css" />
   </head>
 
   <body>
@@ -61,7 +61,7 @@
         </div>
         
     </div>
-    <script src="C:\Users\Komal\OneDrive\Desktop\calci\calci.js"></script>
+    <script src="C:\Users\Komal\OneDrive\Desktop\calci\script1.js"></script>
 
   </body>
   
