--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CALCI</title>
-    <link rel="stylesheet" href="C:\Users\Komal\OneDrive\Desktop\calci\style1.css" />
+    <link rel="stylesheet" href="style1.css" />
   </head>
 
   <body>
