--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         
     </div>
-    <script src="C:\Users\Komal\OneDrive\Desktop\calci\script1.js"></script>
+    <script src="script1.js"></script>
 
   </body>
   
